--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 		</script>
 	</head>
 	<body>
-		<h1><center>这是我的第一个网站</center></h1>
+		<h1><center>我的第一个网站</center></h1>
+		
+		<center>
+		<div style="width:100px; height:100px; border-radius:100%; overflow:hidden; margin:0">
+		<img src="dema.jpg" alt="只是圆形图片" height="100" />
+		</div>
+		</center>
+		
 		<div><center>
 		<video onmouseover="play_v1(this)" onmouseleave="play_v1(this)" id="videos" height="800" src="Blueming.mp4" autoplay="autoplay" type="video/mp4" loop></video>
 		</center>
