--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
 	<body>
 		<h1><center>我的第一个网站</center></h1>
 		
+		
 		<center>
 		<div style="width:100px; height:100px; border-radius:100%; overflow:hidden; margin:0">
 		<img src="dema.jpg" alt="只是圆形图片" height="100" />
 		</div>
 		</center>
+		
+		<h2><center></center></h2>
+		
+		
+		<center>
+		<img src="photo.jpg" alt="只是圆形图片" height="900" />
+		</center>
+		
 	</body>
 </html>
