--- a/index.html
+++ b/index.html
@@ -2,14 +2,6 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>搭建的是一个网站</title>
-		<script>
-		function play_v1(v){
-			v.play()
-		}
-		function stop_v1(v){
-			v.pause();
-		}
-		</script>
 	</head>
 	<body>
 		<h1><center>我的第一个网站</center></h1>
@@ -17,16 +9,14 @@
 		
 		<center>
 		<div style="width:100px; height:100px; border-radius:100%; overflow:hidden; margin:0">
-		<img src="dema.jpg" alt="只是圆形图片" height="100" />
+		<img src="dema.jpg" alt="圆形图片" height="100" />
 		</div>
 		</center>
 		
-		<h2><center></center></h2>
-		
+		<h2></h2>
 		
 		<center>
 		<img src="photo.jpg" alt="只是圆形图片" height="900" />
 		</center>
-		
 	</body>
 </html>
